доавлен адаптив для xs по всем секциям

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <form action="mailer/smart.php" method="POST" class="js-ajax"> <!--  был class form-input-->
         <input type="text" name="fio" class="input  user_name form__input-1" placeholder="Ваше имя" required>
         <input type="tel" name="phone" class="input  user_phone form__input-2" placeholder="Ваш телефон" required>
-        <button type="submit" class="button  form__button" >Получить бесплатный дизайн&nbsp;-&nbsp;проект</button>
+        <button type="submit" class="button  form__button" >Получить <span class="hidden-xs">бесплатный дизайн&nbsp;-&nbsp;проект</span></button>
         </form>    
        
         <div class="form__item">
@@ -323,7 +323,7 @@
         <form action="mailer/smart.php" method="POST" class="calculation-input"> <!-- это секция  с окном ввода данных-->
           <input type="text" name="fio" class="input user_name calculation__input-1" placeholder="Ваше имя" required>
           <input type="tel" name="phone" class="input user_phone calculation__input-2" placeholder="Ваш телефон" required>
-          <button type="submit" class="button  calculation__button" >Рассчитать стоимость</button>
+          <button type="submit" class="button  calculation__button" >Рассчитать <span class="hidden-xs">стоимость</span></button>
         </form>
         <div class="calculation-form__phone">  <!-- это div для телефона, мы его выделяем в отдельный div вот зачеи? -->
           Мы перезвоним Вам в течение 60 секунд         
