--- a/index.html
+++ b/index.html
@@ -156,16 +156,15 @@
               breakpoint: 768,
               settings: {
                   slidesToShow: 1,
-                  slidesToScroll: 1
-        
+                  slidesToScroll: 1,
+                  prevArrow: null,
+                  nextArrow: null
               }
             } 
           ]
         });        
       });
-</script>
-
- 
+</script> 
   <div class="modal" id="modal-callback"> <!-- начало модального окна-->
     <div class="modal__dialog"> <!-- окошко посередине-->
       <div class="modal__close">&#10006;</div><!--./close--> <!--крестик сверху слева-->
